<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Spotter</string>

    <!-- Commom -->
    <string name="text_loading">Loading</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <!--Login Activity -->
    <string name="text_hint_number">Phone number</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_description">By clicking Sign In you agree to our</string>
    <string name="text_terms">Terms and Conditions</string>
    <string name="text_country_code">+1</string>
    <string name="text_empty_number_msg">Please enter phone number</string>
    <string name="text_valid_length">Please enter valid number</string>
    <string name="no_internet">No Internet Connection</string>

    <!--Home Activity -->
    <string name="text_title_home">Space(Company)</string>
    <string name="text_hint_vin">Enter VIN Number</string>
    <string name="empty_vin_msg">Please enter vin number</string>
    <string name="empty_vin">Please Enter VIN</string>
    <string name="text_scan">Scan</string>
    <string name="text">Text</string>

    <!-- Verification Activity -->
    <string name="space"></string>
    <string name="text_resend">Resend Code</string>
    <string name="text_verification">Verify OTP</string>
    <string name="text_number">2</string>
    <string name="text_verify">Please enter the verification code sent to</string>
    <string name="text_number_one">1</string>
    <string name="text_number_two">2</string>
    <string name="text_number_three">3</string>
    <string name="text_number_four">4</string>
    <string name="text_number_five">5</string>
    <string name="text_number_six">6</string>
    <string name="text_number_seven">7</string>
    <string name="text_number_eight">8</string>
    <string name="text_number_nine">9</string>
    <string name="text_number_ten">0</string>
    <string name="otp_verified_success_msg">OTP Verified Successfully</string>
    <string name="the_sms_verificaton_code_has_been_sent_to_the_provided_phone_number">The SMS verification code has
        been sent to the provided phone number
    </string>
    <string name="text_enter_otp">Please enter Otp</string>
    <string name="login_success_msg">Successfully Logged in</string>
    <string name="text_user_not_exists">User does not exist. Please sign-up</string>

    <!-- History -->
    <string name="text_vin">VIN:</string>
    <string name="text_vin_number">1GSHH557BCXJNBCJDSC7</string>
    <string name="text_vehical_name">2016 Rang Rover Discovery</string>
    <string name="text_delete_all">Are you sure you want to clear all vehicle info?</string>
    <string name="text_delete_one">Are you sure you want to clear vehicle info?</string>
    <string name="text_yes">Yes</string>
    <string name="text_hint_vin_search">Enter VIN Number</string>
    <string name="text_hint_search_vin">Search VIN</string>
    <string name="text_empty_histroy">Your vehicle history list is empty</string>
    <string name="delete_response_msg">Deleted All records</string>
    <string name="delete_all_response_msg">Deleted all the records</string>

    <!--Tag Location -->
    <string name="text_model">Year / Make / Model:</string>
    <string name="text_lat_lng">LAT/LONG</string>
    <string name="text_tag_location">Tag Location</string>
    <string name="title_activity_tag_location_map">Map</string>
    <string name="text_title">Vehicle details</string>
    <string name="text_car_model">
        <xliff:g>%1$s</xliff:g>,
        <xliff:g>%2$s</xliff:g>,
        <xliff:g>%3$s</xliff:g>
    </string>

    <!-- Tag Location Map -->
    <string name="text_title_map">Tag Car Location</string>
    <string name="text_title_vehicle_location">Vehicle Location</string>
    <string name="text_location_save_msg">Vehicle location saved successfully</string>
    <string name="text_distance">Distance:</string>
    <string name="distance">12.099</string>
    <string name="text_marker_title">
        <xliff:g>%1$s</xliff:g>\n
        <xliff:g>%2$s</xliff:g>,
        <xliff:g>%3$s</xliff:g>,
        <xliff:g>%4$s</xliff:g>
    </string>
    <string name="text_me">Me</string>
    <string name="format_distance">
        <xliff:g id="view">%1$s</xliff:g>
    </string>

    <!-- Navigation Drawer -->
    <string name="text_history">History</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_terms_condition">Terms and Conditions</string>
    <string name="text_logout">Logout</string>
    <string name="text_logout_alert">Are you sure you want to logout?</string>

    <!-- Dialogs Button text -->
    <string name="text_alert">Alert</string>
    <string name="text_btn_scan">Scan</string>
    <string name="text_sign_up">Signup</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_exit">Exit</string>
    <string name="text_camera_permission_denied">Permission Denied</string>
    <string name="text_no">No</string>
    <string name="text_settings">Settings</string>
    <string name="text_buy">Buy</string>
    <string name="text_renew">Renew</string>
    <string name="allow">Allow</string>
    <string name="request_admin">Request Admin</string>

    <string name="text_access_permission_msg">These Permissions are necessary for App</string>
    <string name="text_gps_permission">&#160;will not run without enabling GPS. Please go to settings and turn on GPS.
    </string>
    <string name="text_alert_permissions"><xliff:g id="view">%1$s</xliff:g>&#160;will not run without allowing
        all the permissions.
    </string>

    <string name="text_alert_permissions_settings"><xliff:g id="view">%1$s</xliff:g>&#160;will not run without
        allowing all the permissions. Please go to settings and turn on all the permissions.
    </string>
    <string name="text_package">package:
        <xliff:g id="view">%1$s</xliff:g>
    </string>
    <string name="dialog_title">Scan Code Result</string>
    <string name="text_long_press_msg">Long press on Map to Tag Vehicle location</string>
    <string name="text_don_show_again">Don\'t show again</string>
    <string name="subscription_msg">Your subscription has been expired. Please purchase subscription for continuing
        parking.
    </string>
    <string name="update">Update</string>

    <!-- Tag Location Map -->
    <string name="text_save">Save</string>
    <string name="title_activity_maps">Map</string>

    <!-- Submit Request -->
    <string name="text_subject">Subject:</string>
    <string name="text_note">Note:</string>
    <string name="text_subject_hint">text..</string>
    <string name="submit">Submit</string>
    <string name="title_submit_request">Submit Request</string>
    <string name="text_empty_subject_msg">Please enter Subject</string>
    <string name="text_empty_note_msg">Please enter Note</string>

</resources>
