<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.activity.VerificationActivity">


    <android.support.constraint.Guideline
            android:id="@+id/guideLine45W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".045"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideLine95W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayoutTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideLine45W"
            app:layout_constraintEnd_toEndOf="@id/guideLine95W">

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/app_name"/>

        <TextView
                android:id="@+id/tvResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorAccent"
                android:text="@string/text_resend"
                android:visibility="gone"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorAccent"
                tools:text="00:29"
                android:visibility="gone"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tvVerification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_19ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_verification"
                android:textColor="@color/colorBlue_Dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBack"/>

        <TextView
                android:id="@+id/tvCodeSentDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:text="@string/text_verify"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvVerification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/clMiddle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_17sdp"
            android:layout_marginEnd="@dimen/_17sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutTop"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/etFirst"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue_Dark"
                android:textSize="@dimen/_19ssp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/background_edit_text_bottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/etSecond"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue_Dark"
                android:textSize="@dimen/_19ssp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/background_edit_text_bottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/etFirst"
                app:layout_constraintEnd_toStartOf="@id/etThird"/>

        <TextView
                android:id="@+id/etThird"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue_Dark"
                android:textSize="@dimen/_19ssp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/background_edit_text_bottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/etSecond"
                app:layout_constraintEnd_toStartOf="@id/etFourth"/>

        <TextView
                android:id="@+id/etFourth"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue_Dark"
                android:textSize="@dimen/_19ssp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/background_edit_text_bottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/etThird"
                app:layout_constraintEnd_toStartOf="@id/etFifth"/>

        <TextView
                android:id="@+id/etFifth"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorBlue_Dark"
                android:textSize="@dimen/_19ssp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/background_edit_text_bottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/etFourth"
                app:layout_constraintEnd_toStartOf="@id/etSixth"/>

        <TextView
                android:id="@+id/etSixth"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorBlue_Dark"
                android:textSize="@dimen/_19ssp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_3sdp"
                android:background="@drawable/background_edit_text_bottom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_21sdp"
            android:layout_marginEnd="@dimen/_21sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clMiddle">

        <Button
                android:id="@+id/btnOne"
                style="@style/ButtonNumber"
                android:text="@string/text_number_one"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnFour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnTwo"/>

        <Button
                android:id="@+id/btnTwo"
                style="@style/ButtonNumber"
                android:text="@string/text_number_two"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnFive"
                app:layout_constraintEnd_toStartOf="@id/btnThree"
                app:layout_constraintStart_toEndOf="@id/btnOne"/>

        <Button
                android:id="@+id/btnThree"
                style="@style/ButtonNumber"
                android:text="@string/text_number_three"
                app:layout_constraintBottom_toTopOf="@id/btnSix"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnTwo"/>

        <Button
                android:id="@+id/btnFour"
                style="@style/ButtonNumber"
                android:text="@string/text_number_four"
                app:layout_constraintBottom_toTopOf="@id/btnSeven"
                app:layout_constraintTop_toBottomOf="@id/btnOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnFive"/>

        <Button
                android:id="@+id/btnFive"
                style="@style/ButtonNumber"
                android:text="@string/text_number_five"
                app:layout_constraintBottom_toTopOf="@id/btnEight"
                app:layout_constraintTop_toBottomOf="@id/btnTwo"
                app:layout_constraintEnd_toStartOf="@id/btnThree"
                app:layout_constraintStart_toEndOf="@id/btnFour"/>

        <Button
                android:id="@+id/btnSix"
                style="@style/ButtonNumber"
                android:text="@string/text_number_six"
                app:layout_constraintBottom_toTopOf="@id/btnNine"
                app:layout_constraintTop_toBottomOf="@id/btnThree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnFive"/>

        <Button
                android:id="@+id/btnSeven"
                style="@style/ButtonNumber"
                android:text="@string/text_number_seven"
                app:layout_constraintTop_toTopOf="@id/btnEight"
                app:layout_constraintBottom_toBottomOf="@id/btnEight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnEight"/>

        <Button
                android:id="@+id/btnEight"
                style="@style/ButtonNumber"
                android:text="@string/text_number_eight"
                app:layout_constraintBottom_toTopOf="@id/btnZero"
                app:layout_constraintTop_toBottomOf="@id/btnFive"
                app:layout_constraintEnd_toStartOf="@id/btnThree"
                app:layout_constraintStart_toEndOf="@id/btnFour"/>

        <Button
                android:id="@+id/btnNine"
                style="@style/ButtonNumber"
                android:text="@string/text_number_nine"
                app:layout_constraintBottom_toTopOf="@id/btnZero"
                app:layout_constraintTop_toBottomOf="@id/btnSix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnEight"/>

        <Button
                android:id="@+id/btnZero"
                style="@style/ButtonNumber"
                android:text="@string/text_number_ten"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnEight"
                app:layout_constraintEnd_toStartOf="@id/btnThree"
                app:layout_constraintStart_toEndOf="@id/btnFour"/>

        <ImageView
                android:id="@+id/ivCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross_ic"
                app:layout_constraintTop_toTopOf="@id/btnZero"
                app:layout_constraintBottom_toBottomOf="@id/btnZero"
                app:layout_constraintStart_toStartOf="@id/btnSeven"
                app:layout_constraintEnd_toEndOf="@id/btnSeven"/>

        <ImageView
                android:id="@+id/ivKeyDone"
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:background="@null"
                android:src="@drawable/selector_key_done"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_2sdp"
                app:layout_constraintStart_toEndOf="@+id/btnZero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnNine"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="UnusedAttribute"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>