<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvp.activity.LoginActivity">

    <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            android:contentDescription="@string/app_name"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:background="@drawable/background_edit_text"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_41sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn">

        <com.hbb20.CountryCodePicker
                android:id="@+id/spCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_countryPreference="US,IN,NZ"
                app:ccp_defaultNameCode="US"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <View
                android:id="@+id/view"
                android:layout_width="0.6dp"
                android:layout_height="0dp"
                android:background="@color/colorBorder_Gray"
                app:layout_constraintStart_toEndOf="@id/spCountryCode"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>

        <EditText
                android:id="@+id/etNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@null"
                android:maxLength="14"
                android:hint="@string/text_hint_number"
                android:textColorHint="@color/colorSpinnerText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/_10sdp"/>

    </android.support.constraint.ConstraintLayout>

    <Button
            android:id="@+id/btnSignIn"
            style="@style/ButtonStyle"
            android:textAllCaps="false"
            android:text="@string/text_sign_in"
            android:layout_marginBottom="@dimen/_26sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clBottom"/>

    <LinearLayout
            android:id="@+id/clBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:gravity="center">

        <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:singleLine="true"
                android:text="@string/text_description"
                android:textColor="@color/colorBlue_Dark"
                android:fontFamily="@font/roboto_regular"/>

        <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/text_terms"
                android:singleLine="true"
                android:textColor="@color/colorBlue_Dark"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginStart="@dimen/_2sdp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>